--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1963,6 +1963,24 @@ body {
     .logo a img {
         max-width: 80%;
     }
+    .change_height {
+        height: 240px!important;
+    }
+    .overlay {
+        width: 91%;
+    }
+}
+
+@media only screen and (min-width:400px) and (max-width:450px) {
+    .logo a img {
+        max-width: 80%;
+    }
+    .change_height {
+        height: 255px!important;
+    }
+    .overlay {
+        width: 92.5%;
+    }
 }
 
 
@@ -1972,6 +1990,12 @@ body {
     .logo a img {
         max-width: 100%;
     }
+    .overlay {
+        width: 96%;
+    }
+    .change_height {
+        height: 479px!important;
+    }
 }
 
 
@@ -1980,6 +2004,12 @@ body {
 @media screen and (min-width: 1100px) {
     .logo a img {
         max-width: 100%;
+    }
+    .overlay {
+        width: 92%;
+    }
+    .change_height {
+        height: 240px!important;
     }
 }
 
