--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1848,6 +1848,15 @@ font-family: 'Poppins', sans-serif;
             padding: 0 5px!important;
             text-align: center;
         }
+        .is-sticky .main-menu .nav li a {
+            color: #1e217b;
+        }
+        .main-menu .nav .dropdown li.active a,
+        .main-menu .nav .dropdown li a:hover,
+        .main-menu .nav .dropdown li a:focus {
+            color: #00d8ff;
+            background-color: transparent;
+        }
     }
     
     @media only screen and (min-width:400px) and (max-width:450px) {
@@ -1859,6 +1868,9 @@ font-family: 'Poppins', sans-serif;
         }
         .overlay {
             width: 92.5%;
+        }
+        .is-sticky .main-menu .nav li a {
+            color: #1e217b;
         }
     }
     /* tab */
@@ -1885,6 +1897,9 @@ font-family: 'Poppins', sans-serif;
         }
         .change_height {
             height: 240px!important;
+        }
+        .is-sticky .main-menu .nav li a {
+            color: white;
         }
     }
     /* ipad pro */
