--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1597,13 +1597,13 @@ font-family: 'Poppins', sans-serif;
 --------------------------------------*/
     
     .footer-copyright {
-        background: #293580c4;
-        padding: 0 0 60px;
+        background: #d6e9f3;
+        padding: 0 0 20px;
         border-top: 2px solid black;
     }
     
     .footer-content {
-        padding: 60px 0;
+        padding: 40px 0px 0px 0px;
     }
     /*single-footer-item*/
     
@@ -1613,7 +1613,7 @@ font-family: 'Poppins', sans-serif;
     }
     
     .single-footer-item h2 {
-        color: #565a5c;
+        color: black!important;
         font-size: 16px;
         font-weight: 600;
         margin-bottom: 40px;
@@ -1622,7 +1622,7 @@ font-family: 'Poppins', sans-serif;
     /*footer-logo*/
     
     .footer-logo {
-        padding-top: 0px;
+        padding-top: 5px;
     }
     
     .footer-logo a,
@@ -1648,17 +1648,26 @@ font-family: 'Poppins', sans-serif;
         font-family: 'Poppins', sans-serif;
         text-transform: capitalize;
     }
+    /* footer-img- grow */
+    
+    .single-footer-item a img {
+        transition: all 1.5s ease;
+    }
+    
+    .single-footer-item a:hover img {
+        transform: scale(1.2);
+    }
     /*footer-logo*/
     /*single-footer-txt*/
     
     .single-footer-txt p {
         margin-bottom: 8px;
         text-align: justify;
-        color: white;
+        color: black;
     }
     
     .single-footer-txt p a {
-        color: white;
+        color: black;
         font-size: 16px;
         -webkit-transition: .5s ease-in-out;
         -moz-transition: .5s ease-in-out;
@@ -1678,7 +1687,7 @@ font-family: 'Poppins', sans-serif;
     /*single-footer-txt*/
     
     .footer-copyright hr {
-        border-top: 1px solid white;
+        border-top: 1px solid black;
     }
     /*foot-icons*/
     
@@ -1738,7 +1747,7 @@ font-family: 'Poppins', sans-serif;
     .foot-icons p {
         color: #aaa;
         font-size: 16px;
-        margin-top: 28px;
+        margin-top: 10px;
     }
     
     .foot-icons p a,
