--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1763,6 +1763,7 @@ font-family: 'Poppins', sans-serif;
         color: #00d8ff !important;
     }
     
+    .emailmagic:hover,
     .digitalmagic:hover {
         color: #00d8ff !important;
     }
