--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -271,7 +271,7 @@ body {
 }
 
 .is-sticky .main-menu .nav li a {
-    color: white;
+    color: #1e217b;
 }
 
 .is-sticky .main-menu .nav .dropdown-menu li a {
